# cpp_starter_project

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: ClangFormat.cmake  StaticAnalyzers.cmake  TestCoverage.cmake
docker/: Dockerfile  install_llvm_toolchain.sh
include/lib/: lib.h
scripts/: clang_format.sh  clang_tidy.sh  test_coverage.sh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  example.cpp
src/lib/: CMakeLists.txt  example_lib.cpp  example_lib.hpp
tests/: CMakeLists.txt  test_lib.cpp
